--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "date-fns": "^1.30.1",
     "lodash": "^4.17.11",
     "react": "16.6.3",
     "react-native": "0.57.8",
