--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.57.8",
     "react-native-gesture-handler": "^1.0.15",
     "react-navigation": "^3.3.0",
+    "react-navigation-redux-helpers": "^3.0.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
