--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "axios": "^0.18.0",
     "date-fns": "^1.30.1",
     "lodash": "^4.17.11",
-    "react": "16.6.3",
-    "react-native": "0.57.8",
-    "react-native-gesture-handler": "^1.0.15",
+    "react": "^16.8.3",
+    "react-native": "^0.58.5",
+    "react-native-gesture-handler": "^1.0.16",
     "react-navigation": "^3.3.0",
     "react-navigation-redux-helpers": "^3.0.0",
-    "react-redux": "^6.0.0",
+    "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-jest": "23.6.0",
-    "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.51.1",
-    "react-test-renderer": "16.6.3",
+    "babel-jest": "^24.1.0",
+    "jest": "^24.1.0",
+    "metro-react-native-babel-preset": "^0.52.0",
+    "react-test-renderer": "^16.8.3",
     "reactotron-react-native": "^2.1.4",
     "reactotron-redux": "^2.1.3"
   },
