--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.8.3",
     "react-native": "^0.58.5",
     "react-native-gesture-handler": "^1.0.16",
+    "react-native-svg": "^9.2.4",
     "react-navigation": "^3.3.0",
     "react-navigation-redux-helpers": "^3.0.0",
     "react-redux": "^6.0.1",
