--- a/.flowconfig
+++ b/.flowconfig
@@ -12,12 +12,13 @@
 ; For RN Apps installed via npm, "Libraries" folder is inside
 ; "node_modules/react-native" but in the source repo it is in the root
 .*/Libraries/react-native/React.js
+.*/Libraries/react-native/ReactNative.js
 
 ; Ignore polyfills
 .*/Libraries/polyfills/.*
 
 ; Ignore metro
-.*/node_modules/metro/.*
+.*/node_modules/metro/.*  
 
 [include]
 
@@ -67,4 +68,4 @@ suppress_comment=\\(.\\|\n\\)*\\$FlowFixedInNextDeploy
 suppress_comment=\\(.\\|\n\\)*\\$FlowExpectedError
 
 [version]
-^0.78.0
+^0.89.0
