--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js run-ios",
-    "test": "jest"
+    "start": "yarn ios",
+    "ios": "node node_modules/react-native/local-cli/cli.js run-ios",
+    "android": "node node_modules/react-native/local-cli/cli.js run-android",
+    "test": "jest",
+    "lint": "eslint .",
+    "clear-cache": "watchman watch-del-all && rm -rf $TMPDIR/react-native-packager-cache-* && rm -rf $TMPDIR/metro-bundler-cache-* && rm -rf node_modules/ && yarn cache clean && yarn",
+    "link-all": "react-native link react-native-gesture-handler && react-native link react-native-svg"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "date-fns": "^1.30.1",
     "lodash": "^4.17.11",
-    "react": "^16.8.3",
-    "react-native": "^0.58.5",
+    "react": "16.8.3",
+    "react-native": "0.59.2",
+    "react-native-geolocation-service": "^2.0.0",
     "react-native-gesture-handler": "^1.0.16",
-    "react-native-svg": "^9.2.4",
-    "react-navigation": "^3.3.0",
+    "react-native-mapbox-gl": "^5.2.1-deprecated",
+    "react-native-svg": "^9.3.6",
+    "react-navigation": "^3.5.1",
     "react-navigation-redux-helpers": "^3.0.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
@@ -23,12 +30,16 @@
     "reselect": "^4.0.0"
   },
   "devDependencies": {
-    "babel-jest": "^24.1.0",
-    "jest": "^24.1.0",
-    "metro-react-native-babel-preset": "^0.52.0",
-    "react-test-renderer": "^16.8.3",
-    "reactotron-react-native": "^2.1.4",
-    "reactotron-redux": "^2.1.3"
+    "@babel/core": "^7.4.0",
+    "@babel/runtime": "^7.4.2",
+    "@react-native-community/eslint-config": "^0.0.3",
+    "babel-jest": "^24.5.0",
+    "eslint": "^5.15.3",
+    "jest": "^24.5.0",
+    "metro-react-native-babel-preset": "^0.53.1",
+    "react-test-renderer": "16.8.3",
+    "reactotron-react-native": "^3.2.1",
+    "reactotron-redux": "^3.1.0"
   },
   "jest": {
     "preset": "react-native"
