--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "lint": "eslint .",
     "clear-cache": "watchman watch-del-all && rm -rf $TMPDIR/react-native-packager-cache-* && rm -rf $TMPDIR/metro-bundler-cache-* && rm -rf node_modules/ && yarn cache clean && yarn",
-    "link-all": "react-native link react-native-gesture-handler && react-native link react-native-svg"
+    "link-all": "react-native link react-native-gesture-handler && react-native link react-native-svg && react-native link react-native-geolocation-service"
   },
   "dependencies": {
     "axios": "^0.18.0",
