chore(mapbox): android linked

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -107,6 +107,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -138,11 +139,14 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-mapbox-gl')
     implementation project(':react-native-geolocation-service')
     implementation project(':react-native-svg')
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "com.android.support:design:${rootProject.ext.supportLibVersion}"
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    implementation "com.android.support:multidex:1.0.0"
     implementation "com.facebook.react:react-native:+"  // From node_modules
 }
 
