--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "link-all": "react-native link react-native-gesture-handler && react-native link react-native-svg && react-native link react-native-geolocation-service"
   },
   "dependencies": {
+    "@mapbox/react-native-mapbox-gl": "^6.1.3",
     "axios": "^0.18.0",
     "date-fns": "^1.30.1",
     "lodash": "^4.17.11",
@@ -19,7 +20,6 @@
     "react-native": "0.59.2",
     "react-native-geolocation-service": "^2.0.0",
     "react-native-gesture-handler": "^1.0.16",
-    "react-native-mapbox-gl": "^5.2.1-deprecated",
     "react-native-svg": "^9.3.6",
     "react-navigation": "^3.5.1",
     "react-navigation-redux-helpers": "^3.0.0",
