--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest",
     "lint": "eslint .",
     "clear-cache": "watchman watch-del-all && rm -rf $TMPDIR/react-native-packager-cache-* && rm -rf $TMPDIR/metro-bundler-cache-* && rm -rf node_modules/ && yarn cache clean && yarn",
-    "link-all": "react-native link react-native-gesture-handler && react-native link react-native-svg && react-native link react-native-geolocation-service"
+    "link-all": "react-native link react-native-gesture-handler && react-native link react-native-svg && react-native link react-native-geolocation-service",
+    "flow": "flow"
   },
   "dependencies": {
     "@mapbox/react-native-mapbox-gl": "^6.1.3",
@@ -35,6 +36,7 @@
     "@react-native-community/eslint-config": "^0.0.3",
     "babel-jest": "^24.5.0",
     "eslint": "^5.15.3",
+    "flow-bin": "0.93.0",
     "jest": "^24.5.0",
     "metro-react-native-babel-preset": "^0.53.1",
     "react-test-renderer": "16.8.3",
