--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "flow": "flow"
   },
   "dependencies": {
-    "@mapbox/react-native-mapbox-gl": "^6.1.3",
+    "@mapbox/react-native-mapbox-gl": "https://github.com/nitaliano/react-native-mapbox-gl.git",
     "axios": "^0.18.0",
     "date-fns": "^1.30.1",
     "lodash": "^4.17.11",
