--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -16,3 +16,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+SGBUS_RELEASE_STORE_FILE=sg-bus-key.keystore
+SGBUS_RELEASE_KEY_ALIAS=sg-bus-key
+SGBUS_RELEASE_STORE_PASSWORD=youronemappassword
+SGBUS_RELEASE_KEY_PASSWORD=youronemappassword
