--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "yarn ios",
     "ios": "node node_modules/react-native/local-cli/cli.js run-ios",
     "android": "node node_modules/react-native/local-cli/cli.js run-android",
+    "android:release": "node node_modules/react-native/local-cli/cli.js run-android --variant=release",
+    "android:build": "cd android && ./gradlew assembleRelease && cd ..",
     "test": "jest",
     "lint": "eslint .",
     "clear-cache": "watchman watch-del-all && rm -rf $TMPDIR/react-native-packager-cache-* && rm -rf $TMPDIR/metro-bundler-cache-* && rm -rf node_modules/ && yarn cache clean && yarn",
