--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "throttled-queue": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
