--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "android": "node node_modules/react-native/local-cli/cli.js run-android",
     "android:release": "node node_modules/react-native/local-cli/cli.js run-android --variant=release",
     "android:build": "cd android && ./gradlew assembleRelease && cd ..",
-    "generate:stubs": "babel-node --presets es2015 ./scripts/index.js",
+    "generate:stubs": "babel-node ./scripts/index.js --presets @babel/env",
     "test": "jest",
     "lint": "eslint .",
     "clear-cache": "watchman watch-del-all && rm -rf $TMPDIR/react-native-packager-cache-* && rm -rf $TMPDIR/metro-bundler-cache-* && rm -rf node_modules/ && yarn cache clean && yarn",
@@ -34,13 +34,14 @@
     "reselect": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.0",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.4.4",
     "@babel/runtime": "^7.4.2",
     "@mapbox/polyline": "^1.0.0",
     "@react-native-community/eslint-config": "^0.0.3",
-    "babel-cli": "^6.26.0",
     "babel-jest": "^24.5.0",
-    "babel-preset-es2015": "^6.24.1",
     "eslint": "^5.15.3",
     "flow-bin": "0.93.0",
     "jest": "^24.5.0",
