--- a/scripts/config.json
+++ b/scripts/config.json
@@ -2,7 +2,13 @@
   "oneMap": {
     "email": "youronemap@email.com",
     "password": "youronemappassword",
-    "getTokenUrl": "https://developers.onemap.sg/privateapi/auth/post/getToken",
-    "getBusRouteUrl": "https://developers.onemap.sg/publicapi/busexp/getOneBusRoute?busNo={ServiceNo}&direction={BusDirection}&token={AccessToken}"
+    "tokenUrl": "https://developers.onemap.sg/privateapi/auth/post/getToken",
+    "busRouteUrl": "https://developers.onemap.sg/publicapi/busexp/getOneBusRoute?busNo={ServiceNo}&direction={BusDirection}&token={AccessToken}"
+  },
+  "lta": {
+    "accountKey": "yourltaaccountkey",
+    "busServicesUrl": "http://datamall2.mytransport.sg/ltaodataservice/BusServices",
+    "busStopsUrl": "http://datamall2.mytransport.sg/ltaodataservice/BusStops",
+    "busRoutesUrl": "http://datamall2.mytransport.sg/ltaodataservice/BusRoutes"
   }
 }
