--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "why-did-you-update": "^1.0.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
