--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -152,6 +152,7 @@ android {
 }
 
 dependencies {
+    implementation project(':rn-fetch-blob')
     implementation project(':lottie-react-native')
     implementation project(':react-native-geolocation-service')
     implementation project(':react-native-svg')
