--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,6 +39,8 @@ target 'SGBus' do
 
   pod 'lottie-react-native', :path => '../node_modules/lottie-react-native'
 
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
   target 'SGBusTests' do
     inherit! :search_paths
     # Pods for testing
