--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
+    "redux-persist-filesystem-storage": "^1.3.2",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "why-did-you-update": "^1.0.6"
