refactor(app): change bundle id (ios) & package name (android)

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "yarn ios",
     "ios": "node node_modules/react-native/local-cli/cli.js run-ios",
     "android": "node node_modules/react-native/local-cli/cli.js run-android",
-    "android:release": "node node_modules/react-native/local-cli/cli.js run-android --variant=release",
-    "android:build": "cd android && ./gradlew assembleRelease && cd ..",
+    "android:run-release": "node node_modules/react-native/local-cli/cli.js run-android --variant=release",
+    "android:release": "cd android && ./gradlew assembleRelease && cd ..",
     "generate:stubs": "babel-node ./scripts/index.js --presets @babel/env",
     "test": "jest",
     "lint": "eslint .",
