--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@mapbox/react-native-mapbox-gl": "https://github.com/nitaliano/react-native-mapbox-gl.git",
     "axios": "^0.18.0",
+    "d3-shape": "^1.3.5",
     "date-fns": "^1.30.1",
     "lodash": "^4.17.11",
     "lottie-react-native": "^2.6.1",
