feat(stubs): generate searchable

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "android": "node node_modules/react-native/local-cli/cli.js run-android",
     "android:run-release": "node node_modules/react-native/local-cli/cli.js run-android --variant=release",
     "android:release": "cd android && ./gradlew assembleRelease && cd ..",
-    "generate:stubs": "babel-node ./scripts/index.js --presets @babel/env",
+    "generate:stubs": "yarn generate:bus-lta && yarn generate:bus-onemap && yarn generate:bus-searchable",
+    "generate:bus-searchable": "babel-node ./scripts/bus/searchable.js --presets @babel/env",
+    "generate:bus-lta": "babel-node ./scripts/bus/lta.js --presets @babel/env",
+    "generate:bus-onemap": "babel-node ./scripts/bus/onemap.js --presets @babel/env",
     "test": "jest",
     "lint": "eslint .",
     "clear-cache": "watchman watch-del-all && rm -rf $TMPDIR/react-native-packager-cache-* && rm -rf $TMPDIR/metro-bundler-cache-* && rm -rf node_modules/ && yarn cache clean && yarn",
