--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "generate:bus-searchable": "babel-node ./scripts/bus/searchable.js --presets @babel/env",
     "generate:bus-lta": "babel-node ./scripts/bus/lta.js --presets @babel/env",
     "generate:bus-onemap": "babel-node ./scripts/bus/onemap.js --presets @babel/env",
+    "generate:secret": "babel-node ./scripts/app-secret.js --presets @babel/env",
     "test": "jest",
     "lint": "eslint .",
     "npm-clear": "watchman watch-del-all && rm -rf $TMPDIR/react-native-packager-cache-* && rm -rf $TMPDIR/metro-bundler-cache-* && rm -rf node_modules/ && yarn cache clean",
