--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "axios": "^0.18.0",
     "d3-shape": "^1.3.5",
     "date-fns": "^1.30.1",
+    "i18next": "^17.0.7",
     "lodash": "^4.17.11",
     "lottie-react-native": "^2.6.1",
     "react": "16.8.3",
+    "react-i18next": "^10.11.4",
     "react-native": "0.59.2",
     "react-native-geolocation-service": "^2.0.0",
     "react-native-gesture-handler": "^1.0.16",
