--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -152,6 +152,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-device-info')
     implementation project(':lottie-react-native')
     implementation project(':@mapbox_react-native-mapbox-gl')
     implementation project(':react-native-geolocation-service')
