--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,4 +38,6 @@ target 'SGBus' do
   pod 'lottie-ios', :path => '../node_modules/lottie-ios'
   pod 'lottie-react-native', :path => '../node_modules/lottie-react-native'
 
+  pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
+
 end
