--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "date-fns": "^1.30.1",
     "i18next": "^17.0.7",
     "lodash": "^4.17.11",
-    "lottie-react-native": "^2.6.1",
+    "lottie-react-native": "2.6.1",
     "react": "16.8.3",
     "react-i18next": "^10.11.4",
     "react-native": "0.59.2",
