--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,4 +39,6 @@ target 'SGBus' do
   pod 'lottie-react-native', :path => '../node_modules/lottie-react-native'
 
 
+  pod 'react-native-netinfo', :path => '../node_modules/@react-native-community/netinfo'
+
 end
