--- a/.gitignore
+++ b/.gitignore
@@ -32,18 +32,7 @@ local.properties
 
 # node.js
 #
-!node_modules/
-node_modules/*
-
-!node_modules/@mapbox/
-node_modules/@mapbox/*
-!node_modules/@mapbox/react-native-mapbox-gl/
-node_modules/@mapbox/react-native-mapbox-gl/*
-!node_modules/@mapbox/react-native-mapbox-gl/android/
-node_modules/@mapbox/react-native-mapbox-gl/android/*
-!node_modules/@mapbox/react-native-mapbox-gl/android/rctmgl/
-node_modules/@mapbox/react-native-mapbox-gl/android/rctmgl/*
-!node_modules/@mapbox/react-native-mapbox-gl/android/rctmgl/build.gradle
+node_modules/
 
 npm-debug.log
 yarn-error.log
