--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "postinstall": "npx jetify"
   },
   "dependencies": {
-    "@mapbox/react-native-mapbox-gl": "https://github.com/nitaliano/react-native-mapbox-gl.git",
+    "@mapbox/react-native-mapbox-gl": "git+https://github.com/nitaliano/react-native-mapbox-gl.git",
     "@react-native-community/netinfo": "^4.1.3",
     "axios": "^0.18.0",
     "d3-shape": "^1.3.5",
